# Foundation

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  package.json
.cargo/: config.toml
.github/workflows/: foundation-build.yml
.pi/prompts/: feature-implement.md  feature-plan.md  review-feature.md  scaffold-feature-plan.md
.pi/skills/feature-plan-docs/: SKILL.md
.pi/skills/feature-review-handoff/: SKILL.md
.pi/skills/feature-tracker-update/: SKILL.md
.pi/skills/foundation-architecture/: SKILL.md
.pi/skills/gitflow-workflow/: SKILL.md
.pi/skills/rust-workspace-dev/: SKILL.md
crates/editor/: Cargo.toml
crates/editor/src/: main.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/foundation/: Cargo.toml
crates/foundation-build/: Cargo.toml
crates/foundation-build/src/: lib.rs  main.rs
crates/foundation-console-macros/: Cargo.toml
crates/foundation-console-macros/src/: lib.rs
crates/foundation-editor-library/: Cargo.toml
crates/foundation-editor-library/src/: asset_picker.rs  lib.rs
crates/foundation-library/: Cargo.toml
crates/foundation-library/src/: lib.rs  menu.rs  scene_stack.rs  splash_screen.rs
crates/foundation-runtime-library/: Cargo.toml  build.rs
crates/foundation-runtime-library/src/: bsn_assets.rs  credits.rs  dynamic_bsn.rs  dynamic_bsn_grammar.lalrpop  dynamic_bsn_lexer.rs  game_settings.rs  lib.rs  logging.rs  menu.rs  scene_stack.rs  splash_screen.rs  startup_scene.rs
crates/foundation-runtime-library/src/console/: mod.rs
crates/foundation/src/: launch.rs  main.rs  manifest.rs
crates/game/: Cargo.toml
crates/game/src/: lib.rs  main.rs
crates/jackdaw-editor/: Cargo.toml
crates/jackdaw-editor/src/: main.rs
crates/pillar-editor/: Cargo.toml
crates/pillar-editor/src/: main.rs
docs/: branch-protection.md  build-packaging.md  debug-console.md  foundation-engine.md  foundation-scene-stack.md  logging.md  scene-system.md
docs/plans/_templates/: plan.template.md  tracker.template.md
docs/plans/branch-protection-ci/: plan.md  tracker.md
docs/plans/codebase-cleanup-review/: plan.md  tracker.md
docs/plans/credits-scene/: plan.md  tracker.md
docs/plans/debug-console/: plan.md  tracker.md
docs/plans/documentation-workflow/: plan.md  tracker.md
docs/plans/external-template-game/: plan.md  tracker.md
docs/plans/foundation-build-packaging/: plan.md  tracker.md
docs/plans/foundation-editor-library/: plan.md  tracker.md
docs/plans/foundation-library/: plan.md  tracker.md
docs/plans/foundation-scene-stack/: plan.md  tracker.md
docs/plans/gameplay-level-pause-menu/: plan.md  tracker.md
docs/plans/jackdaw-editor-integration/: plan.md  tracker.md
docs/plans/remove-jackdaw-editor/: plan.md  tracker.md
docs/plans/rust-coding-standards-skill/: plan.md  tracker.md
docs/plans/scene-stack-example/: plan.md  tracker.md
docs/plans/ui-refinement/: plan.md  tracker.md
docs/plans/workspace-app-launchers/: plan.md  tracker.md
games/template-game/: Cargo.toml  foundation.game.toml  foundation.settings.toml  jackdaw.toml
games/template-game/.cargo/: config.toml
games/template-game/.jsn/: project.jsn
games/template-game/assets/: credits.jsn  credits.json  gameplay_level.jsn  landing_page.jsn  load_game.jsn  main_menu.jsn  options_menu.jsn  pause_menu.jsn  scene.jsn  splash_background.jsn  splash_bevy.jsn  splash_pixel_perfect.jsn
games/template-game/src/: lib.rs  main.rs
games/template-game/src/scenes/: bevy_splash.rs  gameplay.rs  main_menu.rs  menu.rs  mod.rs  pixel_perfect_splash.rs  splash.rs
games/template-game/tests/: template_components.rs
scripts/: Invoke-RustWorkspace.ps1  Scaffold-FeaturePlan.ps1  compile-project.cmd  doc-project.cmd  format-project.cmd  foundation-build.cmd  lint-project.cmd  package-game.cmd  scaffold-feature-plan.cmd  show-config.cmd  test-project.cmd  validate-env.cmd  validate-project.cmd
src/: lib.rs
