[workspace]
members = [
    "crates/foundation",
    "crates/foundation-editor-library",
    "crates/foundation-runtime-library",
    "games/template-game",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
bevy = { version = "0.19.0", features = [
    "file_watcher",
    "reflect_documentation",
    "serialize",
] }
ctrlc = "3"
foundation-editor-library = { path = "crates/foundation-editor-library" }
foundation-runtime-library = { path = "crates/foundation-runtime-library" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
