[workspace]
members = [
    "crates/foundation",
    "crates/foundation-console-macros",
    "crates/foundation-editor-library",
    "crates/foundation-runtime-library",
    "crates/foundation-build",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
bevy = { version = "0.19.0", features = [
    "file_watcher",
    "reflect_documentation",
    "serialize",
] }
bevy_feathers = "0.19.0"
bevy_input_focus = "0.19.0"
ctrlc = "3"
foundation-console-macros = { path = "crates/foundation-console-macros" }
foundation-editor-library = { path = "crates/foundation-editor-library" }
foundation-runtime-library = { path = "crates/foundation-runtime-library", default-features = false }
linkme = "0.3"
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "parsing", "printing"] }
toml = "0.9"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 0

[profile.foundation-test]
inherits = "release"
debug = "line-tables-only"
strip = "none"
lto = "thin"

[profile.foundation-shipping]
inherits = "dev"
opt-level = 3
debug = false
strip = "symbols"
lto = "off"
codegen-units = 16
panic = "abort"
