[package]
name = "foundation-console-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Procedural macros for Foundation debug console commands"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
