[package]
name = "foundation-runtime-library"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Reusable Foundation runtime systems for Bevy games"

[dependencies]
bevy.workspace = true
bevy_feathers.workspace = true
bevy_input_focus.workspace = true
foundation-console-macros.workspace = true
linkme.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
