[package]
name = "foundation-runtime-library"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Reusable Foundation runtime systems for Bevy games"

[features]
default = ["dev-tools"]
dev-tools = [
    "dep:bevy_feathers",
    "dep:bevy_input_focus",
    "dep:foundation-console-macros",
    "dep:linkme",
]

[dependencies]
bevy.workspace = true
bevy_feathers = { workspace = true, optional = true }
bevy_input_focus = { workspace = true, optional = true }
foundation-console-macros = { workspace = true, optional = true }
lalrpop-util.workspace = true
linkme = { workspace = true, optional = true }
nom.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[build-dependencies]
lalrpop.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_System_Console"] }
