[package]
name = "foundation"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Foundation engine launcher for Bevy games"

[dependencies]
bevy.workspace = true
ctrlc.workspace = true
foundation-editor-library.workspace = true
foundation-runtime-library.workspace = true
template-game = { path = "../../games/template-game" }
