[package]
name = "pillar-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "PillarEditor Jackdaw editor host"

[dependencies]
bevy.workspace = true
ctrlc.workspace = true
jackdaw.workspace = true
pigame-engine.workspace = true
pigame-game.workspace = true
