[package]
name = "template-game"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Example game built on the Foundation engine"

[lib]
crate-type = ["rlib"]

[dependencies]
bevy.workspace = true
foundation-editor-library.workspace = true
foundation-runtime-library.workspace = true
